--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -1,3 +1,19 @@
+@import '../variables.scss';
+
 .app {
-  // ..
+  display: flex;
+  justify-content: center;
+  margin: 20px 0 0;
+
+  &__window {
+    background-color: $color-window-background;
+    border-radius: 4px;
+    flex-basis: 700px;
+    box-shadow: 0 2px 4px $color-shadow;
+    overflow: hidden;
+  }
+
+  &__window-content {
+    padding: 20px 50px;
+  }
 }
