Style the Files Summary

--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -17,4 +17,10 @@
     padding: 20px 50px;
     color: $color-foreground;
   }
+
+  &__files-summary {
+    border-top: 1px solid $color-foreground;
+    margin: 20px 0 0;
+    padding: 20px;
+  }
 }
