--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -16,11 +16,10 @@
   &__window-content {
     padding: 20px 50px;
     color: $color-foreground;
+  }
 
-    &--none {
-      padding: 100px 0;
-      text-align: center;
-    }
+  &__icon-wrapper {
+    text-align: center;
   }
 
   &__icon {
